--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
             </a>
             <ul class="header-list list">
                 <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
-                <li class="header-item"><a href="" class="header-link link">Портфолио</a></li>
+                <li class="header-item"><a href="" class="header-link link current">Портфолио</a></li>
                 <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
             </ul>
         </nav>
@@ -36,7 +36,7 @@
 <section>
     <h1 class="visually-hidden">Наши работьі</h1>
     <ul class="filters-list list">
-        <li class="ƒilters-item"><button type="button" class="filters-btn">Все</button></li>
+        <li class="ƒilters-item"><button type="button" class="filters-btn current-filter">Все</button></li>
         <li class="filters-item"><button type="button" class="filters-btn">Веб-сайты</button></li>
         <li class="filters-item"><button type="button" class="filters-btn">Приложения</button></li>
         <li class="filters-item"><button type="button" class="filters-btn">Дизайн</button></li>
