--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             Web<span class="header-logo-part">Studio</span>
         </a>
         <ul class="header-list list">
-            <li class="header-item"><a href="" class="header-link link">Студия</a></li>
+            <li class="header-item"><a href="" class="header-link link current">Студия</a></li>
             <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
             <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
         </ul>
