--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <title>Студия</title>
+    <title>Портфолио</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -33,9 +33,9 @@
         </ul>
     </header>
     <main>
-<section>
-    <h1 class="visually-hidden">Наши работьі</h1>
-    <ul class="filters-list list">
+        <section>
+            <h1 class="visually-hidden">Наши работьі</h1>
+     <ul class="filters-list list">
         <li class="ƒilters-item"><button type="button" class="filters-btn current-filter">Все</button></li>
         <li class="filters-item"><button type="button" class="filters-btn">Веб-сайты</button></li>
         <li class="filters-item"><button type="button" class="filters-btn">Приложения</button></li>
@@ -89,6 +89,7 @@
             <p class="examples-text">Приложение</p></a>
         </li>
     </ul>
+        </section>
     </main>
     <footer class="footer">
         <a class="logo link" href="/">
